--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -74,10 +74,10 @@ admin_34 : "فشل الامر !."
 # Bot 
 
 # Start
-start_1 : "- يـ؏ـُمريـہ هياتني يم الفخمين {0}\n\n -  اضغط على زر الاعدادات وضبط اعدادات البوت في مجموعتك - للاستفسارات راسل مطور البوت - @IIIlIIv , استمتعو (:"
-start_2 : "**↯︙ اهلا بك عزيزي انا بوت اسمي {0} :\n\n**
-**↯︙ يمكنني تشغيل الموسيقى والفيديو في الاتصال  ..\n\n**
-**↯︙ ادعم تشغيل منصات ‹ يوتيوب • سبوتفاي › ولخ .**"
+start_1 : "- يـ؏ـُمريـہ هياتني يم الفخمين {0}\n\n -  اضغط على زر الاعدادات وضبط اعدادات البوت في مجموعتك (:"
+start_2 : "**↯︙ اهلا بك عزيزي في بوت تشغيل القران ... :\n\n**
+** ↯︙ وظيفتي تشغيل القران في الاتصال  ... :\n\n**
+** ↯︙ ادعم تشغيل الصوتيات في الجروبات و القنوات ... :\n\n ↯︙ ادعم منصة يوتيوب و الخ ... :**"
 
 start_3 : "اهلين فيك في بوت {0} يعمري\n\n- ارفعني مشرف بكل الصلاحيات عشان اشتغل بدون مشاكل يا حلو .\n\nيوزر الحساب المساعد -› - @{2}\nايديه -› - {3}"
 start_4 : "**- تم انضمام مطور البوت الان ** {0} {1} "
